# LPR

./: CMakeLists.txt  README.md
include/: CNNRecognizer.h  FastDeskew.h  FineMapping.h  Pipeline.h  PlateDetection.h  PlateInfo.h  PlateSegmentation.h  Recognizer.h  SegmentationFreeRecognizer.h  mobilelpr.hpp
ncnn/install/include/ncnn/: platform.h
ncnn/install/lib/cmake/ncnn/: ncnnConfig.cmake
src/: CNNRecognizer.cpp  FastDeskew.cpp  FineMapping.cpp  LPR.cpp  Pipeline.cpp  PlateDetection.cpp  PlateSegmentation.cpp  Recognizer.cpp  SegmentationFreeRecognizer.cpp  UltraFace.cpp  mobilelpr.cpp
